fixed buttons on mobile works page

--- a/paintings_style.css
+++ b/paintings_style.css
@@ -321,7 +321,7 @@ a:hover {
 	}
 
 	#chevrons {
-		width: 80%;
+		width: 100%;
 	}
 
 	#pic_info_box {
